--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "mongoose": "^5.10.5"
   }
 }
